hphp/hack/test/typecheck/dynamic/coercion/append.php.exp
File "append.php", line 6, characters 10-11:
Invalid return type (Typing[4110])
File "append.php", line 3, characters 40-46:
This is a dynamic value
File "append.php", line 4, characters 10-10:
It is incompatible with an int
